# datasette-ca460

./: .gitignore  Justfile  pyproject.toml
.github/workflows/: test.yml
datasette_ca460/: __init__.py  routes.py  schema.sql  sync.py
datasette_ca460/templates/: ca460_sync.html  ca460_vite_entry.html
example/: plugin.py
frontend/: api.d.ts  package-lock.json  vite.config.ts
frontend/src/: CA460Index.svelte  CA460Sync.svelte  DevBadge.svelte  api.ts  index_view.ts  sync_view.ts  utils.ts
tests/: test_ca460.py
