[project]
name = "datasette-ca460"
version = "0.1"
description = ""
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a23",
    "llm>=0.28",
    "python-documentcloud>=4.5.0",
    "Pillow>=10.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "llm-gemini>=0.28.2",
    "datasette-llm-accountant @ https://github.com/datasette/datasette-llm-accountant/archive/refs/heads/configurable-pricing.zip",
    "datasette-plugin-router @ https://github.com/datasette/datasette-plugin-router/archive/refs/heads/main.zip",
    "extract-ca460==0.0.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-ca460"
Changelog = "https://github.com/datasette/datasette-ca460/releases"
Issues = "https://github.com/datasette/datasette-ca460/issues"
CI = "https://github.com/datasette/datasette-ca460/actions"

[project.entry-points.datasette]
ca460 = "datasette_ca460"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_ca460 = ["static/**/*", "templates/*", "manifest.json", "schema.sql"]

[tool.setuptools.packages.find]
exclude = ["frontend"]
